# rpv-platform

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.test  KNOWLEDGE.md  Makefile  PLANNING.md  README.md  TASK.md  docker-compose.yml  prd-plataforma-rpv-capital-v2.md  pyproject.toml  requirements.txt
bot/: Dockerfile  __init__.py
bot/tools/: __init__.py
database/migrations/: 001_initial_schema.sql
esaj_task/: Dockerfile
infra/terraform/: main.tf  variables.tf
infra/terraform/environments/dev/: main.tf
infra/terraform/environments/prod/: main.tf
infra/terraform/modules/ecs/: main.tf
infra/terraform/modules/eventbridge/: main.tf
infra/terraform/modules/lambda/: main.tf
infra/terraform/modules/rds/: main.tf
infra/terraform/modules/vpc/: main.tf
motor/: __init__.py
tests/: __init__.py  conftest.py
tests/e2e/: test_conversation_flow.py
tests/integration/: test_webhook.py
tests/unit/bot/: __init__.py  test_tools.py
tests/unit/motor/: __init__.py  test_parser_pdf.py  test_proposta.py
