[project]
name = "rpv-capital"
version = "0.1.0"
description = "Plataforma de Antecipação de RPVs Municipais"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Wagner", email = "wagner@ideanovalabs.com" }
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=bot --cov=motor --cov=lambdas --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
